third_party/move/move-compiler/tests/move_check/skip_attribute_checks/attribute_no_closing_bracket.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/skip_attribute_checks/attribute_no_closing_bracket.move:4:5
  │
3 │     #[attr = 0
  │      - To match this '['
4 │     fun foo() {}
  │     ^ Expected ']'

